[tool.poetry]
name = "dcmagick"
version = "0.1.0"
description = "Python libray for displaying images on terminal"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ar90n/dcmagick"
keywords = ["dicom", "terminal", "graphics"]

[tool.poetry.dependencies]
python = "^3.6"
pydicom = "^1.4.1"
click = "^7.0"
numpy = "^1.18.1"
joblib = "^0.14.1"
scikit-image = "^0.16.2"
teimpy = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-mypy = "^0.1.8"
pytest-black = "^0.3.7"
pytest-mypy = "^0.4.2"
pre-commit = "^1.20"
bandit = "^1.6.2"
pytest-cov = "^2.8.1"
pppiv = "^0.1.1"
wemake-python-styleguide = "^0.13.4"
pycallgraph = "^1.0.1"
radon = "^4.1.0"
pytest-xdist = "^1.31.0"

[tool.poetry.scripts]
dcmagick = 'dcmagick.cli:main'

[tool.black]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
